--- a/main.css
+++ b/main.css
@@ -28,6 +28,7 @@ header {
     font-family: "New Amsterdam", sans-serif;
     font-weight: 400;
     font-style: normal;
+    padding-bottom: 60px;
 }
 
 #festival, #lineup, #faq {
@@ -43,3 +44,8 @@ article .btn {
     border-color: #fff;
 }
 
+footer {
+    background-color: #f0c9e6;
+    color: #3f3f3f;
+    padding: 10px;
+}
